--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ kramdown:
 ####################################
 #
 owner:
-  name: Hyeong-Gyu Kim
+  name: Hyeong-Gyu
   avatar: #leonids-logo.png   # No logo
   job: "Post master (Atmospheric scientist)"
   bio: "For Atmospheric Scientists & Engineers"
